--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://us-cluster-east-01.k8s.cleardb.net:3306/heroku_3e16b78a190657c
-spring.datasource.username=b2beaa2594258d
-spring.datasource.password=b0553437
+spring.datasource.url=jdbc:mysql://localhost:3306/coinwalletx
+spring.datasource.username=root
+spring.datasource.password=root
 server.port=8083
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
